# rag-multimodal

./: .gitignore  GIT_SETUP.md  Makefile  README.md  docker-compose.yml
backend/: config.py  dependencies.py  main.py  mcp_client.py  models.py  pyproject.toml  routes.py  test_api.py
backend/api/: __init__.py  dependencies.py
backend/conversations/: conversation_2025-12-16_16-24-39.json  conversation_2025-12-16_16-24-52.json  conversation_2025-12-16_16-24-54.json  conversation_2025-12-16_16-28-12.json  conversation_2025-12-16_16-28-14.json  conversation_2025-12-16_18-01-21.json  conversation_2025-12-16_18-01-23.json  conversation_2025-12-16_18-01-24.json  conversation_2025-12-16_18-02-13.json  conversation_2025-12-16_18-02-14.json  conversation_2025-12-16_18-02-15.json  conversation_2025-12-16_18-02-17.json  conversation_2025-12-16_18-02-48.json  conversation_2025-12-16_18-02-49.json  conversation_2025-12-16_18-02-51.json  conversation_2025-12-16_18-06-10.json  conversation_2025-12-16_18-06-11.json  conversation_2025-12-16_18-06-13.json  conversation_2025-12-16_18-21-54.json  conversation_2025-12-16_18-21-55.json  conversation_2025-12-16_18-21-56.json  conversation_2025-12-16_18-21-58.json  conversation_2025-12-16_18-21-59.json  conversation_2025-12-16_18-22-00.json  conversation_2025-12-16_18-26-27.json  conversation_2025-12-16_18-26-30.json  conversation_2025-12-16_18-27-00.json  conversation_2025-12-16_18-27-04.json  conversation_2025-12-16_18-28-37.json  conversation_2025-12-16_18-28-40.json  conversation_2025-12-16_18-28-42.json  (+8 more)
backend/core/: __init__.py  (+3 more)
(+69 files in other folders)
