[project]
name = "mcp-client-api"
version = "0.1.0"
description = "MCP Client API Backend"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "fastapi>=0.124.4",
    "groq>=0.4.0",
    "httpx>=0.28.1",
    "mcp>=1.24.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]

